--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,48 @@
 plugins {
     id 'java'
+    id 'edu.sc.seis.launch4j' version '2.4.6'
+}
+def versions = '1.1.1.1'
+def name = 'Server'
+def main = 'ru.bkmz.kurs.Main'
+launch4j {
+    mainClassName = main
+    outfile = name + versions + ".exe"
+    version = versions
+    textVersion = versions
+    companyName = "BkzmLitel"
+    copyright = "BkzmLitel"
+    launch4j.language = 'RUSSIAN'
+    launch4j.icon = "B:\\fon1 (1).ico"
+    /* launch4j.jreMinVersion = "1.8.0"
+     launch4j.jreMaxVersion = "1.8.0_221"*/
+    internalName = name
 }
 
-group 'server'
-version '1.0-SNAPSHOT'
 
+apply plugin: "edu.sc.seis.launch4j"
+group name
+version versions
 sourceCompatibility = 1.8
-
+compileJava.options.encoding = "UTF-8"
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.json:json:20190722'
+    compile 'org.json:json:20190722'
+    implementation 'com.googlecode.json-simple:json-simple:1.1'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
+}
+jar {
+    exclude 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.SF'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    manifest {
+        attributes(
+                'Class-Path': configurations.runtime.files.collect { "lib/$it.name" }.join(' '),
+                'Main-Class': main
+        )
+    }
 }
